<resources>
    <string name="app_name">ChrisApp</string>
    <string name="call_service">Call Service</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_home">Home</string>
    <string name="action_find">Find</string>
    <string name="action_search">Search</string>
    <string name="action_folder">Folder</string>

    <string name="book_client_endpoint">http://rueggerconsultingllc.com/RestWeb/rest/</string>
    <string name="book_client_endpoint_local">http://192.168.1.167:8080/RestWeb/rest/</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
